--- a/package.json
+++ b/package.json
@@ -14,10 +14,12 @@
     "@supabase/supabase-js": "^2.79.0",
     "@tailwindcss/vite": "^4.1.13",
     "axios": "^1.12.2",
+    "lucide-react": "^0.554.0",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-router-dom": "^7.9.3",
-    "tailwindcss": "^4.1.13"
+    "tailwindcss": "^4.1.13",
+    "zustand": "^5.0.8"
   },
   "devDependencies": {
     "@eslint/js": "^9.30.1",
